--- a/src/index.html
+++ b/src/index.html
@@ -216,10 +216,9 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 });
 
 $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', function () {
+  setTimeout(function(){
   $('.sendNewCode').hide();
-//   setTimeout(function(){
-//   $('.sendNewCode').hide();
-// },50);
+},50);
 setTimeout(function(){
   $('.sendNewCode').show();
 },20000);
@@ -234,7 +233,7 @@ setTimeout(function(){
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//26
+//27
 
 })
 
