--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,10 @@ setTimeout(function(){
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//27
+//28
+
+$('#usernameverificationpin_but_send_new_code').replaceWith('<div id="newcodediv"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>')
+
 
 })
 
