--- a/src/index.html
+++ b/src/index.html
@@ -216,11 +216,12 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 });
 
 $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', function () {
-  setTimeout(function(){
-  $('.sendNewCode').hide();
-},50);
+  $('#newcodediv').hide();
+//   setTimeout(function(){
+//   $('.sendNewCode').hide();
+// },50);
 setTimeout(function(){
-  $('.sendNewCode').show();
+  $('#newcodediv').show();
 },20000);
 });
 
@@ -233,7 +234,7 @@ setTimeout(function(){
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//28
+//29
 
 $('#usernameverificationpin_but_send_new_code').replaceWith('<div id="newcodediv"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>')
 
