--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@ $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', functio
 //   $('.sendNewCode').hide();
 // },50);
 setTimeout(function(){
-  $('#newcodediv').show();
+  $('#newcodediv').replaceWith('<div id="newcodediv" style="dispay: inline;"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>');
 },20000);
 });
 
@@ -234,9 +234,9 @@ setTimeout(function(){
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//31
+//32
 
-$('#usernameverificationpin_but_send_new_code').replaceWith('<div id="newcodediv" style="dispay: inline;"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>')
+$('#usernameverificationpin_but_send_new_code').replaceWith('<div id="newcodediv" style="dispay: inline;"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>');
 
 
 })
