--- a/src/index.html
+++ b/src/index.html
@@ -216,12 +216,11 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 });
 
 $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', function () {
-  $('#newcodediv').hide();
-//   setTimeout(function(){
-//   $('.sendNewCode').hide();
-// },50);
+  setTimeout(function(){
+  $('.sendNewCode').hide();
+},50);
 setTimeout(function(){
-  $('#newcodediv').replaceWith('<div id="newcodediv" style="dispay: inline;"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>');
+  $('.sendNewCode').show();
 },20000);
 });
 
@@ -234,9 +233,9 @@ setTimeout(function(){
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//32
+//33
 
-$('#usernameverificationpin_but_send_new_code').replaceWith('<div id="newcodediv" style="dispay: inline;"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>');
+//$('#usernameverificationpin_but_send_new_code').replaceWith('<div id="newcodediv" style="dispay: inline;"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>');
 
 
 })
