--- a/src/index.html
+++ b/src/index.html
@@ -216,15 +216,12 @@ if ($('#claimVerificationServerError').text().indexOf('Error')>=0) {
 });
 
 $('#usernameverificationpin_success_message').bind('DOMSubtreeModified', function () {
-  $('#usernameverificationpin_but_send_new_code').replaceWith('<div id="newcodediv" style="dispay: none;"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>');
 
-//   setTimeout(function(){
-//   $('.sendNewCode').hide();
-// },50);
+  setTimeout(function(){
+  $('.sendNewCode').hide();
+},50);
 setTimeout(function(){
-  $('#usernameverificationpin_but_send_new_code').replaceWith('<button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button>');
-
-  //$('.sendNewCode').show();
+$('.sendNewCode').show();
 },20000);
 });
 
@@ -237,7 +234,7 @@ setTimeout(function(){
 //   $('#usernameverificationpin_but_send_new_code').show();
 // },10000);
 // });
-//34
+//35
 
 //$('#usernameverificationpin_but_send_new_code').replaceWith('<div id="newcodediv" style="dispay: inline;"><button class="sendNewCode" id="usernameverificationpin_but_send_new_code" type="button" aria-label="Send new code" aria-hidden="false" style="display: inline;">Send new code</button></div>');
 
